--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,6 +1,7 @@
+<app-nav-bar></app-nav-bar>
 <body>
-    <app-nav-bar></app-nav-bar>
     <app-banner></app-banner>
+    <app-ubicacion></app-ubicacion>
 </body>
 
 
