--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,12 +1,16 @@
    <div class="container">
    <div class="row justify-content-between">
         <div class="col-5">
+            <div data-aos="fade-up"
+            data-aos-duration="2000">
         <h2>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi harum laudantium optio mollitia accusantium non inventore libero? Odit, nemo, vel quasi ab in rerum, ex doloremque fuga sunt libero quos?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi harum laudantium optio mollitia accusantium non.
         </h2>
-        </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores deleniti sapiente qui aliquid tempora atque quis. Sequi facilis explicabo assumenda delectus optio laborum at, officiis deserunt! Dolor cum laudantium necessitatibus.</p>
+    </div>
+    </div>
         <div class="col-5">
-            <img src="https://i.ibb.co/MRRW6zH/productos-de-limpieza2.jpg" alt="productos-de-limpieza2" id="limpieza1">
+            <img src="https://i.ibb.co/MRRW6zH/productos-de-limpieza2.jpg" alt="productos-de-limpieza2" id="limpieza1" data-aos="fade-up" data-aos-duration="2000">
         </div>
     </div> 
 </div> 
