--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -9,8 +9,10 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores deleniti sapiente qui aliquid tempora atque quis. Sequi facilis explicabo assumenda delectus optio laborum at, officiis deserunt! Dolor cum laudantium necessitatibus.</p>
     </div>
     </div>
-        <div class="col-5">
-            <img src="https://i.ibb.co/MRRW6zH/productos-de-limpieza2.jpg" alt="productos-de-limpieza2" id="limpieza1" data-aos="fade-up" data-aos-duration="2000">
+        <div class="col-6">
+            <img src="https://i.ibb.co/MRRW6zH/productos-de-limpieza2.jpg" alt="productos-de-limpieza2" class="limpieza1" id="primero" data-aos="fade-up" data-aos-duration="2000">
+            <img src="https://i.ibb.co/qrZt8CT/limpieza4.jpg" alt="limpieza4" class="limpieza1" id="segundo" data-aos="fade-up" data-aos-duration="2000">
         </div>
     </div> 
 </div> 
+
