--- a/src/app/components/ubicacion/ubicacion.component.css
+++ b/src/app/components/ubicacion/ubicacion.component.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400);
+
 .row{
     margin: 22% 0 5% 0;
     height: 70vh;
@@ -5,7 +7,14 @@
 
 .btn{
    display: block;
-   margin: auto;
+   margin: 10% auto auto;
 
+}
+
+h3{
+    display: flex;
+    justify-content: center;
+    font-family: 'Lato', sans-serif;
+    margin-bottom: 5%;
 }
 
