--- a/src/app/components/ubicacion/ubicacion.component.html
+++ b/src/app/components/ubicacion/ubicacion.component.html
@@ -1,6 +1,8 @@
    
    <div class="row justify-content-center">
     <div class="col-7">
+        <h3 data-aos="fade-up"
+        data-aos-duration="2000">VEN A CONOCERNOS.</h3>
     <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d330685.7043384247!2d-105.00533825416537!3d39.64306929358879!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sve!4v1678590888297!5m2!1ses!2sve" 
         width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" data-aos="fade-up"
         data-aos-duration="2000"></iframe>
