se agregó el logo de Coral al navBar

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
       <span class="navbar-text">
         Productos Coral™
       </span>
-      <a href="">Contactanos</a>
+      <a href="" class=" btn btn-light">Contactanos</a>
     </div>
   </nav>
   
