--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -1,3 +1,10 @@
 nav{
     box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.5);
 }
+
+#logoCoral{
+    margin-left: 20%;
+    width: 45px;
+    height: 35px;
+    border-radius: 100%;
+}
