--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Coral</a>
+      <a class="navbar-brand" href="#">
+        <img src="https://i.ibb.co/7XLcTbx/LOGO-CORAL-COLOR-JPG.jpg" alt="LOGO-CORAL-COLOR-JPG" id="logoCoral"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -8,6 +9,9 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLink="">¿Quienes somos?</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/contacto">Contacto</a>
