Se agregó el componente quienesSomos. Dicho componente se colocó en el componente de inicio

--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,6 +1,7 @@
 <app-nav-bar></app-nav-bar>
 <body>
     <app-banner></app-banner>
+    <app-quienes-somos></app-quienes-somos>
     <app-ubicacion></app-ubicacion>
     <app-contacto></app-contacto>
 </body>
