--- a/src/app/components/quienes-somos/quienes-somos.component.css
+++ b/src/app/components/quienes-somos/quienes-somos.component.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400);
+@import url('https://fonts.googleapis.com/css2?family=Xanh+Mono:ital@1&display=swap');
 
 .row{
     margin: 20% auto;
@@ -6,10 +6,10 @@
 
 h2{
     display: flex;
-    font-family: 'Lato', sans-serif;
+    font-family: Playfair Display;
     justify-content: center;
     margin-bottom: 8%;
-    font-style: italic;
+
 }
 
 #imagenCoral{
