--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -11,13 +11,13 @@
             <a class="nav-link active" aria-current="page" routerLink="">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLink="">¿Quienes somos?</a>
+            <a class="nav-link" aria-current="page" routerLink="/quienesSomos">¿Quienes somos?</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/contacto">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Ubicación</a>
+            <a class="nav-link" routerLink="/ubicacion">Ubicación</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
