--- a/src/app/components/ubicacion/ubicacion.component.html
+++ b/src/app/components/ubicacion/ubicacion.component.html
@@ -1,16 +1,37 @@
    
-   <div class="row justify-content-center">
-    <div class="col-7">
-        <h3 data-aos="fade-up"
-        data-aos-duration="2000">VEN A CONOCERNOS.</h3>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d330685.7043384247!2d-105.00533825416537!3d39.64306929358879!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sve!4v1678590888297!5m2!1ses!2sve" 
-        width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" data-aos="fade-up"
-        data-aos-duration="2000"></iframe>
-    </div>
-</div>
+   <div class="contenedor">
+    <div class="row justify-content-center"  data-aos="fade-up"
+        data-aos-duration="2000" id="titulo">
 
-<button class="btn btn-lg btn-outline-dark" data-aos="fade-up"
-data-aos-duration="2000">Cómo llegar <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right-circle" viewBox="0 0 17 17">
-    <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.854 10.803a.5.5 0 1 1-.708-.707L9.243 6H6.475a.5.5 0 1 1 0-1h3.975a.5.5 0 0 1 .5.5v3.975a.5.5 0 1 1-1 0V6.707l-4.096 4.096z"/>
-  </svg></button>
+            <div class="col-7">
+                <h3 data-aos="fade-up"
+                data-aos-duration="2000">VEN A CONOCERNOS.</h3>
+            </div>
+        </div>
+                <div class="row justify-content-between" data-aos="fade-up"
+                data-aos-duration="2000">
+                    <div class="col-4">
+                <p id="informacion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, deserunt magni nulla ut aliquam quasi voluptas cum placeat neque exercitationem enim sunt quam quos, iusto impedit ducimus veritatis dolorum perferendis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis repudiandae, saepe facilis perferendis sint autem culpa aperiam! Incidunt dicta magni aspernatur, adipisci esse asperiores beatae voluptate possimus assumenda, ipsum quos.</p>
+            </div>
+
+            <div class="col-6">
+                <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d330685.7043384247!2d-105.00533825416537!3d39.64306929358879!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sve!4v1678590888297!5m2!1ses!2sve" 
+                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+        </div>
+            
+            
+
+
+
+        <button class="btn btn-lg btn-outline-dark"    data-aos="fade-up"
+        data-aos-duration="2000">
+            Cómo llegar 
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right-circle" viewBox="0 0 17 17">
+                    <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.854 10.803a.5.5 0 1 1-.708-.707L9.243 6H6.475a.5.5 0 1 1 0-1h3.975a.5.5 0 0 1 .5.5v3.975a.5.5 0 1 1-1 0V6.707l-4.096 4.096z"/>
+                </svg>
+            </button>
+    </div>
 
