--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -1,20 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Xanh+Mono:ital@1&display=swap');
 
+.row{
+    margin: 3% auto auto;
+}
+
 h2{
     color: #1c1c1c;
     font-family: Playfair Display;
-    font-size: 48px;
+    font-size: 3.1rem;
 }
 
 p{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: justify;
+    width: 90%;
 }
 
 .limpieza1{
     width: 70%;
     height: 50vh;
     border-radius: 30px;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, .9);
 }
 
 #primero{
