--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,4 +1,4 @@
-   <div class="container">
+   <div class="container container-fluid">
    <div class="row justify-content-between">
         <div class="col-5">
             <div data-aos="fade-up"
