Se creó el componente de redes y se agregó al inicio. Se hizo responsive el formulario de contacto y se centró en la pagina.

--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -4,6 +4,7 @@
     <P data-aos="fade-up"
     data-aos-duration="2000">¿Quieres trabajar con nosotros o probar nuestros productos?</P>
 
+    <div class="col-8">
     <form id="form" class="topBefore" data-aos="fade-up"
     data-aos-duration="2000">
             
@@ -14,4 +15,5 @@
     <input id="submit" type="submit" value="¡ENVIAR!">
     
     </form>
+</div>
 </div>
