--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,4 +1,5 @@
 <app-nav-bar></app-nav-bar>
+<app-redes></app-redes>
 <body>
     <app-banner></app-banner>
     <app-quienes-somos></app-quienes-somos>
