--- a/src/app/components/contacto/contacto.component.css
+++ b/src/app/components/contacto/contacto.component.css
@@ -76,7 +76,6 @@ input:hover:focus::-ms-placeholder, textarea:hover::focus:-ms-placeholder {
 
 body {
   font-family: 'Lato', sans-serif;
-  background: #e2dedb;
   color: #b3aca7;
 }
 
@@ -85,7 +84,7 @@ header {
   font-size: 2.3em;
   text-align: center;
   letter-spacing: 7px;
-  color: #b3aca7
+  color: #5B544E
 }
 
 p{
@@ -93,26 +92,27 @@ p{
     display: flex;
     justify-content: center;
     margin: auto auto 5vh;
-    color: #b3aca7
+    color: #5B544E
 }
 
 #form {
-  width: 500px;
-
+  width: 100%;
+  display: block;
+  margin: auto auto auto 16%;
 }
 
 input {
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
-  width: 470px;
-  height: 50px;
+  width: 66%;
+  height: 8vh;
   padding: 0px 15px 0px 15px;
   
   background: transparent;
   outline: none;
-  color: #726659;
+  color: #5B544E;
   
-  border: solid 1px #b3aca7;
+  border: solid 1px #5B544E;
   border-bottom: none;
   
   transition: all 0.3s ease-in-out;
@@ -127,20 +127,19 @@ input:hover {
 }
 
 textarea {
-  width: 470px;
-  max-width: 470px;
-  height: 110px;
+  width: 66%;
+  height: 16vh;
   max-height: 110px;
   padding: 15px;
   
   background: transparent;
   outline: none;
   
-  color: #726659;
+  color: #5B544E;
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
   
-  border: solid 1px #b3aca7;
+  border: solid 1px #5B544E;
   
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -154,19 +153,19 @@ textarea:hover {
 }
 
 #submit {
-  width: 470px;
+  width: 66%;
   
   padding: 0;
-  margin: -5px 0px 0px 0px;
+  margin: -6px 0px 0px 0px;
   
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
-  color: #b3aca7;
+  color: #5B544E;
   
   outline:none;
   cursor: pointer;
   
-  border: solid 1px #b3aca7;
+  border: solid 1px #5B544E;
   border-top: none;
 }
 
