--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -2,6 +2,8 @@
 <app-redes></app-redes>
 <body>
     <app-banner></app-banner>
+    <span></span>
+    <span></span>
     <app-quienes-somos></app-quienes-somos>
     <app-ubicacion></app-ubicacion>
     <app-contacto></app-contacto>
