--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -8,18 +8,20 @@ h2{
  
     color: #1c1c1c;
     font-family: Playfair Display;
-    font-size: 3.5vw;
+    font-size: 3.3vw;
 }
 
 p{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: justify;
     width: 90%;
+    font-size: 1.2vw;
 }
 
 .limpieza1{
     width: 70%;
-    height: 50vh;
+    height: 64%;
+    max-height: 500px;
     border-radius: 30px;
     box-shadow: 0 20px 40px rgba(0, 0, 0, .9);
 }
