--- a/src/app/components/contacto/contacto.component.css
+++ b/src/app/components/contacto/contacto.component.css
@@ -81,7 +81,7 @@ body {
 
 header {
     margin: 22% auto 2vh auto;
-  font-size: 2.3em;
+  font-size: 3vw;
   text-align: center;
   letter-spacing: 7px;
   color: #5B544E
@@ -92,7 +92,8 @@ p{
     display: flex;
     justify-content: center;
     margin: auto auto 5vh;
-    color: #5B544E
+    color: #5B544E;
+    font-size: 1.2vw;
 }
 
 #form {
@@ -105,7 +106,8 @@ input {
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
   width: 66%;
-  height: 8vh;
+  height: 4vw;
+  min-height: 40px;
   padding: 0px 15px 0px 15px;
   
   background: transparent;
