--- a/src/app/components/quienes-somos/quienes-somos.component.css
+++ b/src/app/components/quienes-somos/quienes-somos.component.css
@@ -9,16 +9,17 @@ h2{
     font-family: Playfair Display;
     justify-content: center;
     margin-bottom: 8%;
+    font-size: 2.2vw;
 
 }
 
 #imagenCoral{
     width: 90%;
-    height: 45vh;
+    height: 95%;
 }
 
 #informacion{
-    font-size: large;
+    font-size: 1.3vw;
     font-style: italic;
     font-weight: 400;
 }
