--- a/src/app/components/redes/redes.component.css
+++ b/src/app/components/redes/redes.component.css
@@ -7,4 +7,8 @@ svg{
     display: block;
     margin-top: 8%;
     color: black;
+    width:45% ;
+    height: 45%;
+    min-width: 20px;
+    min-height: 20px;
 }
