--- a/src/app/components/ubicacion/ubicacion.component.css
+++ b/src/app/components/ubicacion/ubicacion.component.css
@@ -19,13 +19,26 @@ h3{
     justify-content: center;
     font-family: 'Lato', sans-serif;
     margin-bottom: 5%;
+    font-size: 2.3vw;
 }
 
 #informacion{
     font-style: italic;
     font-weight: 400;
+    font-size: 1.2vw;
 }
 
 iframe{
     box-shadow: 0 20px 40px rgba(0, 0, 0, .9);
+}
+
+button{
+    width: 16%;
+    min-width: 80px;
+    font-size: 1.2vw;
+}
+
+svg{
+    width: 13%;
+    height: 13%;
 }
