cambios en la estructura de la pagina

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,18 +1,30 @@
-   <div class="container container-fluid">
-   <div class="row justify-content-between">
-        <div class="col-5">
-            <div data-aos="fade-up"
-            data-aos-duration="2000">
-        <h2>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi harum laudantium optio mollitia accusantium non.
-        </h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores deleniti sapiente qui aliquid tempora atque quis. Sequi facilis explicabo assumenda delectus optio laborum at, officiis deserunt! Dolor cum laudantium necessitatibus.</p>
+<div id="carouselExampleAutoplaying" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://i.ibb.co/b2fkTbv/stanhome.jpg" alt="stanhome" border="0" class="d-block w-100">
+      </div>
+      <div class="carousel-item ">
+        <img src="https://i.ibb.co/7XLcTbx/LOGO-CORAL-COLOR-JPG.jpg" alt="LOGO-CORAL-COLOR-JPG" border="0" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="https://i.ibb.co/n0HN5LB/Multiclean.jpg" alt="Multiclean" border="0" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="https://i.ibb.co/LxN0sg2/servicio-Limpieza.webp" alt="servicio-Limpieza" border="0" class="d-block w-100">
+      </div>
     </div>
-    </div>
-        <div class="col-6">
-            <img src="https://i.ibb.co/MRRW6zH/productos-de-limpieza2.jpg" alt="productos-de-limpieza2" class="limpieza1" id="primero" data-aos="fade-up" data-aos-duration="2000">
-            <img src="https://i.ibb.co/qrZt8CT/limpieza4.jpg" alt="limpieza4" class="limpieza1" id="segundo" data-aos="fade-up" data-aos-duration="2000">
-        </div>
-    </div> 
-</div> 
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <div class="text-block">
+    <p>Nuestros productos</p>
+  </div>
 
