--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,12 +1,14 @@
 <app-nav-bar></app-nav-bar>
-<app-redes></app-redes>
+
+<div *ngIf="carro == true" class="carrito" >
+    <app-carrito></app-carrito>
+    </div>
+
+<app-redes *ngIf="carro == false"></app-redes>
 <body>
+    
     <app-banner></app-banner>
-    <span></span>
-    <span></span>
-    <app-quienes-somos></app-quienes-somos>
-    <app-ubicacion></app-ubicacion>
-    <app-contacto></app-contacto>
+    <app-productos></app-productos>
 </body>
 <app-footer></app-footer>
 
