--- a/src/app/components/quienes-somos/quienes-somos.component.html
+++ b/src/app/components/quienes-somos/quienes-somos.component.html
@@ -1,11 +1,94 @@
-<div class="row justify-content-between" data-aos="fade-up"
-data-aos-duration="2500">
-    <h2>¿Quienes somos?</h2>
-    <div class="col-6">
-        <img src="https://i.ibb.co/KWSntrd/LOGO-CORAL-MORADO-PNG.png" alt="LOGO-CORAL-MORADO-PNG" id="imagenCoral">
-    </div>
+<app-nav-bar></app-nav-bar>
 
-    <div class="col-5">
-        <p id="informacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, voluptas soluta cupiditate provident iusto doloremque vero rem excepturi voluptatum minus tempora illo nesciunt consequuntur quod ullam optio laborum tempore cum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque possimus ab perspiciatis accusamus iusto hic, ex veniam molestias sequi necessitatibus, veritatis consequuntur id, quibusdam aspernatur dolorem debitis odit quae laudantium!</p>
-    </div>
-</div>
+<div class="contenedor">
+    <div class="marcaBox">
+         <p class="marca">
+             Coral
+         </p>
+         <hr class="lineaInferior">
+         <div class="boxDeSeleccion corto">
+             <button routerLink="/contacto" class="pestaña">Contacto</button>
+             <button routerLink="/quienesSomos" class="pestaña seleccion">Sobre nosotros</button>
+             <button routerLink="/preguntasFrecuentes" class="pestaña">Preguntas frecuentes</button>
+             <button routerLink="/terminos" class="pestaña">Terminos y condiciones</button>
+             <button routerLink="/devoluciones" class="pestaña">Politica de devoluciones</button>
+         </div>
+     </div>
+ 
+     <div class="itemBox">
+         <p class="item">
+             Sobre Nosotros
+         </p>
+         <hr class="lineaInferior">
+         <div class="boxDeSeleccion informacionDeContacto largo">
+             <p class="informacion">
+                    Coral es una empresa dedicada a la elaboración y venta de productos de limpieza de alta calidad.
+                    Nuestra empresa cuenta con una amplia gama de productos para cualquier necesidad, bien sea para el hogar
+                    venezolano o para empresas.
+                </p>
+                    <p class="informacion">
+                    Somos una empresa familiar nacida en el año 2017, en la ciudad de Cumana en el estado sucre al oriente del pais.
+                </p>
+                <p class="informacion">
+                    Trabajamos arduamente para ofrecer el mejor asesoramiento sobre todos nuestros productos comercializados,
+                    con metas claras, creatividad, excelencia en calidad, atendiendo a las necesidades y requerimientos de nuestros clientes
+                    y profesionales con el objetivo de cumplir ampliamente los estándares necesarios para distinguirnos en nuestra localidad y zona de
+                    influencia.
+                </p>
+         </div>
+
+         <hr class="lineaInferior">
+
+         <p class="subtitulo">Nuestros valores.</p>
+          <p class="valores">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+              <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+            </svg> Vocacion y atención al cliente.
+          </p>
+
+          <p class="valores">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+              <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+            </svg> Honestidad e integridad.
+          </p>
+
+          <p class="valores">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+              <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+            </svg> Honestidad.
+          </p>
+
+          <p class="valores">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+              <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+            </svg> Responsabilidad.
+          </p>
+
+          <p class="valores">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+              <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+            </svg> Trabajo en equipo.
+          </p>
+
+          <p class="valores">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+              <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+            </svg> Respeto.
+          </p>
+
+          <p class="valores">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+              <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+            </svg> Compromiso.
+          </p>
+
+          <p class="valores">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+              <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+            </svg> Humildad.
+          </p>
+        
+     </div>
+ </div>
+
+ <app-footer></app-footer>
