--- a/src/app/components/ubicacion/ubicacion.component.html
+++ b/src/app/components/ubicacion/ubicacion.component.html
@@ -6,20 +6,24 @@
             <div class="col-7">
                 <h3 data-aos="fade-up"
                 data-aos-duration="2000">VEN A CONOCERNOS.</h3>
+                <hr class="espacioInferior">
             </div>
         </div>
                 <div class="row justify-content-between" data-aos="fade-up"
                 data-aos-duration="2000">
-                    <div class="col-4">
-                <p id="informacion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, deserunt magni nulla ut aliquam quasi voluptas cum placeat neque exercitationem enim sunt quam quos, iusto impedit ducimus veritatis dolorum perferendis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis repudiandae, saepe facilis perferendis sint autem culpa aperiam! Incidunt dicta magni aspernatur, adipisci esse asperiores beatae voluptate possimus assumenda, ipsum quos.</p>
+                <div class="col-6">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7847.34833472591!2d-64.1082663129325!3d10.447409509743276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c326e59b083707d%3A0xfb0bbbe159cc43e3!2sVilla%20Cristobal%20Colon%2C%20Cuman%C3%A1%206101%2C%20Sucre!5e0!3m2!1ses!2sve!4v1682974559912!5m2!1ses!2sve"
+                     width="90%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
             </div>
-
-            <div class="col-6">
-                <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d330685.7043384247!2d-105.00533825416537!3d39.64306929358879!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sve!4v1678590888297!5m2!1ses!2sve" 
-                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-        </div>
+                    <div class="col-4">
+                <p id="informacion">
+                    Estamos ubicados en La Villa Cristobal Colon, Cumana Edo. Sucre.
+                     Encuentra nuestros productos tambien en supermercados y comercios aliados.
+                     <br>
+                     ¡Ven a visitarnos y prueba nuestros productos!
+                </p>
+            </div>
         </div>
             
             
