--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -1,39 +1,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Xanh+Mono:ital@1&display=swap');
 
-.row{
-    margin: 3% auto auto;
-}
-
-h2{
- 
-    color: #1c1c1c;
-    font-family: Playfair Display;
-    font-size: 3.3vw;
-}
 
 p{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: justify;
-    width: 90%;
-    font-size: 1.2vw;
+    font-family: 'Roboto',Helvetica,Arial,sans-serif;
+    font-size: 140%;
+    font-weight: 600;
+    text-align: center;
+    align-items: center;
+    color: whitesmoke;
+    margin-top: 2%;
 }
 
-.limpieza1{
-    width: 70%;
-    height: 64%;
+img{
+    height: 70vh;
     max-height: 500px;
-    border-radius: 30px;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, .9);
+    margin: 0 0 0 5.6%;
+    object-fit: fill;
 }
 
-#primero{
-    margin-top: -10%;
-    margin-left: -8%;
+@media only screen and (max-width:576px) {
+    img{
+        object-fit: cover;
+    }
+}
+
+.carousel{
+    margin-top: -8%;
     z-index: 0;
 }
 
-#segundo{
-    margin-left: 40%;
-    margin-top: -25%;
-    z-index: -1;
+.carousel-item{
+    width: 90%;
 }
+
+
+
+.text-block{
+    margin: 2% auto 0;
+    width: 90%;
+    height: 5vw;
+    min-height: 60px;
+    background-color: rgba(49, 21, 102, 0.8);
+    display: flex;
+    padding: 2%;
+    align-items: center;
+    justify-content: center;
+}
+
+
