--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,12 +1,97 @@
-nav{
-    border-style: solid;
-    border-width: 1px;
-    border-bottom-width: 0;
-    border-left-width:0 ;
-    border-right-width: 0;
-    border-color: #b3aca7;
+footer{
+    background-color: rgba(53, 22, 109);
+    width: 100%;
+    height: 50vh;
+    padding: 3%;
+  
+}
+.informacion{
+    display: flex;
 }
 
-a{
-    color: #b3aca7;
+@media only screen and (max-width:576px) {
+    .informacion{
+        font-size: 60%;
+    }
+    footer{
+        height: 27vh;
+    }
+    .iconosRedes{
+       display: inline;
+    }
+
+    .icon{
+        width: 15%;
+        height: 15%;
+    }
+    .contenedor{
+        width: 30%;
+    }
+    .icono{
+        width: 10%;
+        height: 10%;
+    }
+}
+
+.marca{
+    color: whitesmoke;
+    font-weight: 600;
+    font-size: 100%;
+    margin: 0 auto;
+}
+
+.contenedor{
+    width: 30%;
+    height: 100%;
+    margin: 0 auto 0;
+}
+
+.separador{
+    width: 80%;
+    height: 1px;
+    background-color: whitesmoke;
+    display: block;
+    margin: 3% 0 3% 0;
+}
+
+.itemsMarca{
+    color: whitesmoke;
+    margin: 1% auto;
+
+}
+
+.itemsMarca:hover:not(.sin-sombreado){
+    color: #000;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.itemUbicacion{
+   font-weight: 600;
+}
+
+.redes{
+    margin: 8% 0 0;
+}
+
+.iconosRedes{
+    color: whitesmoke;
+}
+
+.icon{
+    margin: 0 5% 0 0;
+    display: inline;
+}
+
+
+.separadorInferior{
+    background-color: whitesmoke;
+    width: 100%;
+    height: 1px;
+    display: block;
+    margin: 1% auto 1%;
+}
+
+.centrar{
+   text-align: center;
 }
