--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -1,10 +1,126 @@
+@import url('https://fonts.googleapis.com/css2?family=Xanh+Mono:ital@1&display=swap');
+
 nav{
-    box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.5);
+    background-color: #311566;
+    height: 7.6vw;
+    min-height: 90px;
+    padding: 1%;
+    font-family: 'Bebas Neue', sans-serif;
 }
 
 #logoCoral{
-    margin-left: 20%;
-    width: 45px;
-    height: 35px;
+    margin-left: 8%;
+    margin-right: 1%;
+    width: 60px;
+    height: 50px;
     border-radius: 100%;
 }
+
+#name{
+    display:inline;
+    font-weight: 550;
+    color: whitesmoke;
+    margin: auto 0 auto 1%;
+    font-size: 1.3rem;
+}
+
+.vertical-line{
+    border-left: 1px solid #a1a1a19f;
+    height: 7vh;
+    display: inline;
+    position: absolute;
+    margin: auto 0;
+}
+
+#logoAndName{
+
+    margin-top: 0.5%;
+    margin-left: 2%;
+
+}
+
+#search{
+    margin: 0 0 0 10%;
+    width: 30%;
+    height: 6vh;
+    border-radius: 5px 0 0 5px;
+    border-style: none;
+    border: 1px solid gray;
+    border-right: hidden;
+    padding: 1%;
+    text-align: center;
+    outline: 1px solid #401F7F ;
+}
+
+#icon-search{
+    color: whitesmoke;
+    display: inline;
+}
+
+.search-box{
+    display: inline;
+}
+
+.account{
+    color: white;
+    display: inline;
+    margin: 0 0 0 10%;
+    cursor: pointer;
+    width: 5%;
+}
+
+.account p{
+    font-size: 0.9vw;
+    display: inline;
+    margin-left: 1%;
+}
+
+.btn.lupa{
+   border: 1px solid #25114B;
+   border-radius: 0 5px 5px 0;
+   background-color: #401F7F;
+   height: 6vh;
+   border-left: hidden;
+}
+
+.shop{
+    color: white;
+    display: inline;
+    margin: 0 0 0 5%;
+    cursor: pointer;
+}
+ .underNav{
+    width: 100%;
+    height: 9vh;
+    background-color: rgb(74, 37, 141);
+    padding: 0.7%;
+ }
+
+ .btn.categories{
+    width: 10%;
+    min-width: 100px;
+    height: 6vh;
+    background-color: #311566;
+    margin: auto 0 auto 15%;
+    color: whitesmoke;
+    border: 1px solid whitesmoke ;
+    font-size: 90%;
+ }
+
+ .linkNav{
+    margin: 0 0 0 7%;
+    color: whitesmoke;
+    text-decoration: none;
+    font-weight: 600;
+    
+ }
+ 
+ .linkNav:hover{
+    color: #401F7F;
+ }
+
+ .bi-bell-fill{
+    fill: rgb(248, 0, 0);
+    margin-top: -1%;
+    margin-left: -1px;
+ }
