--- a/src/app/components/quienes-somos/quienes-somos.component.css
+++ b/src/app/components/quienes-somos/quienes-somos.component.css
@@ -1,25 +1,123 @@
-@import url('https://fonts.googleapis.com/css2?family=Xanh+Mono:ital@1&display=swap');
-
-.row{
-    margin: 25% auto;
-}
-
-h2{
+.contenedor{
     display: flex;
-    font-family: Playfair Display;
-    justify-content: center;
-    margin-bottom: 8%;
-    font-size: 2.2vw;
+    padding: 4%;
+  }
+  
+  .marca{
+    font-weight: 600;
+    font-size: 130%;
+  }
+  
+  .item{
+    font-weight: 700;
+    font-size: 130%;
+  }
+  
+  .marcaBox{
+    width: 30%;
+    height: 70vh;
+    padding: 1%;
+  
+  }
+  
+  .itemBox{
+  width: 70%;
+  height: fit-content;
+  padding: 1%;
+  }
+  
+  .lineaInferior{
+    width: 80%;
+  }
 
-}
+  @media only screen and (max-width:576px) {
+    .boxDeSeleccion{
+      font-size: 80%;
+      min-width: 94px;
+    }
+  
+    .seleccion{
+      height: 9% !important;
+    }
 
-#imagenCoral{
-    width: 90%;
-    height: 95%;
-}
+    .corto{
+      height: fit-content !important;
+    }
 
-#informacion{
-    font-size: 1.3vw;
-    font-style: italic;
-    font-weight: 400;
-}
+    .largo{
+      width: 250px !important;
+    }
+  }
+  
+  
+  .boxDeSeleccion{
+    background-color: rgb(218, 217, 217);
+    width: 80%;
+    height: 80%;
+    border-radius: 10px;
+    padding: 5%;
+  }
+  
+  .pestaña{
+    border: none;
+    background-color: rgb(218, 217, 217);
+    display: block;
+    margin: 0 0 14% 0;
+    font-weight: 600;
+    padding: 0 0 0 10%;
+    text-align: left;
+  }
+
+  .pestaña:hover:not(.seleccion){
+   color: #5725b4;
+  }
+  
+  .seleccion{
+    background-color: #311566;
+    color: whitesmoke;
+    width: 100%;
+    height: 14%;
+    text-align: left;
+    border-radius: 5px;
+    padding: 0 0 0 10%;
+  }
+  
+  .subtitulo{
+    font-weight: 800;
+    color: #311566;
+    margin: 0 0 4% 0;
+  }
+  
+  .informacionDeContacto{
+    padding: 3%;
+    color: rgba(49, 21, 102, 0.9);
+    height: 55%;
+  }
+  
+  .informacion{
+    color: #000;
+    font-weight: 450;
+  }
+  
+  .sin-margen-sup{
+    margin-top: -2%;
+  }
+  
+  .mitadDelBox{
+    width: 45%;
+    height: 40%;
+    float: left ;
+  }
+  
+  .mitadDerecha{
+  margin: 0 0 0 5%;
+  }
+  
+  .llevar-al-fondo{
+    margin-top: 41%;
+  }
+
+  .valores{
+    margin-top: -2%;
+    font-weight: 550;
+  }
