--- a/src/app/components/ubicacion/ubicacion.component.css
+++ b/src/app/components/ubicacion/ubicacion.component.css
@@ -9,7 +9,7 @@
 
 .btn{
    display: block;
-   margin: 7% auto auto;
+   margin: 5% auto auto;
    box-shadow: 0 8px 10px rgba(0, 0, 0, .6);
 
 }
@@ -41,4 +41,8 @@ button{
 svg{
     width: 13%;
     height: 13%;
+}
+
+.espacioInferior{
+    margin: 0 0 10% 0;
 }
